--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- About CSS -->
     <link rel="stylesheet" href="src/components/about/about.css">
+    <link rel="stylesheet" href="src/components/projects/projects.css">
 </head>
 <body>
     <div id="navbar-container"></div>
