feat(contact): Add contact section with form and styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- About CSS -->
     <link rel="stylesheet" href="src/components/about/about.css">
     <link rel="stylesheet" href="src/components/projects/projects.css">
+    <link rel="stylesheet" href="src/components/contact/contact.css">
 </head>
 <body>
     <div id="navbar-container"></div>
@@ -27,6 +28,8 @@
     <main id="main-content">
         <section id="home"></section>
         <section id="about"></section>
+        <section id="projects"></section>
+        <section id="contact"></section>
     </main>
 
     <script type="module" src="src/js/main.js"></script>
